--- a/bibliography.bib
+++ b/bibliography.bib
@@ -124,10 +124,16 @@
 	journal = {OSDI'04: Sixth Symposium on Operating System Design and Implementation},
 	year = 2004,
 }
-@misc{keller,
+@misc{keller1,
     author = {Keller, Christopher N.},
     title = {{MERRA Processing in C}},
     year = 2013,
+    note = "Unpublished"
+}
+@misc{keller2,
+    author = {Keller, Christopher N.},
+    title = {{MapReduce in Python}},
+    year = 2011,
     note = "Unpublished"
 }
 @misc{iii,
@@ -135,7 +141,20 @@
     title = {{Industry Overview}},
     year = 2011,
     howpublished = {\url{http://www.iii.org/facts_statistics/industry-overview.html}},
-    note = "Online; accessed 13-March-2012"
+    note = "Online; accessed 13-March-2013"
 }
-
+@misc{opencompute,
+    author = {Open Compute Project},
+    title = {{Hacking Conventional Computing Infrastructure}},
+    year = 2011,
+    howpublished = {\url{http://www.opencompute.org}},
+    note = "Online; accessed 18-March-2013"
+}
+@misc{xen,
+    author = {Xen},
+    title = {{Xen Hypervisor}},
+    year = 2005,
+    howpublished = {\url{http://xen.org/products/xenhyp.html}},
+    note = "Online; accessed 18-March-2013"
+}
 
