--- a/future.tex
+++ b/future.tex
@@ -1,2 +1,9 @@
 %!TEX root=index.tex
 \section{Future Directions}
+In addition to tornado and flood prediction, hail prediction and forensics have been proposed as future \climatedge offerings by the Data Services group. While the ultimate direction is still unresolved, it is possible that the hail prediction data could hit multiple petabytes. A cost efficient scalable storage and compute system will be needed.
+\subsection{Offerings}
+The flood analytics would benefit from further research and clarification around the feasibility of social media and building plan data sets. A research project in itself would be in extracting useful, quantifiable information from online sources relating to floods.
+\subsection{Infrastructure}
+As offerings mature and new capabilities are brought online, it is probable that certain data sets outside of \climatedge, mainly healthcare, may want to be kept within corporate control to ease privacy concerns. In this situation, a platform built on \gls{aws} is not feasible. An alternative to BizCloud could be created which replicates best practices from other big data organizations. Facebook's Open Compute Project is a community targeted effort in data center efficiency, with many vendors selling compliant solutions \cite{opencompute}. Combined with an open source hypervisor, such as Xen, it is possible to replicate much of the basic \gls{aws} functionality in house \cite{xen}.
+\subsection{Realtime Analytics}
+An excellent future optimization for realtime analytics involves crowd sourcing. Conceptually simple, the trick lies in implementing it correctly. Essentially, any time a real time analytic is run, the data is turned into a repeatable offline analytic behind the scenes. This particular analytic can then be presented to the user as one that has been precomputed, thus saving time. For example, if the average rainfall was desired for a particular latitude and longitude, an offline analytic could be created that precomputes this value once per month. Over time, the goal is to change as many realtime questions as possible into precomputed answers.
