--- a/introduction.tex
+++ b/introduction.tex
@@ -17,7 +17,7 @@ The following equation can be applied to the general insurance industry business
 \end{equation*}
 \textsc{CSC} recognized that without a substantial quantitative update, \climatedge could not address the probability of events occurring. \textsc{CSC} then made a strategic decision to focus the second iteration of \climatedge on quantitative prediction. As with the original version, it offers a view into climate prediction based on proprietary analysis of public data. In 2011, the U.S. premiums for property and casualty insurance totaled \$442 billion \cite{iii}. Opportunities exist within this overall market space that \climatedge cannot address without a significant update in how the data is stored, and subsequently analyzed.
 \subsection{Hypothesis}
-Without investing, developing, and applying expertise in big data \index{big data} storage and analytic technologies, future \climatedge offerings will be limited to markets served by processing relatively small and straightforward data sets. By using technologies such as cloud \index{cloud} virtualization, distributed databases, elastic compute and storage, and distributed algorithms, \textsc{CSC} can quantitatively analyze more data and offer \climatedge reporting to an ever increasing number of industries.
+Without investing, developing, and applying expertise in big data \index{big data} storage and analytic technologies, future \climatedge offerings will be limited to markets served by processing relatively small and straightforward data sets. By using technologies such as virtualization, distributed databases, elastic compute and storage, and distributed algorithms, \textsc{CSC} can quantitatively analyze more data and offer \climatedge reporting to an ever increasing number of industries.
 \subsection{Offerings}
 \textsc{CSC's} Data Services group, in conjunction with industry analysts and other internal groups,  has identified several business cases  in which an updated \climatedge offering can benefit the general insurance industry [personal communication, 2013]:
 \begin{itemize}
